--- a/spring-runner/todos/src/main/resources/messages_en.properties
+++ b/spring-runner/todos/src/main/resources/messages_en.properties
@@ -1,3 +1,3 @@
 Exception.MethodArgumentNotValidException=사용자 입력값이 올바르지 않습니다. (from MessageSource)
 Exception.TodoEntityNotFoundException=선택한 할 일을 찾을 수 없습니다. (id: {0})
-Size.todoWriteCommand.title= 할일은 {2} ~ {1}자로
+Size.todoWriteCommand.title= 할일은 {2} ~ {1}자로 (eng)
